--- a/public/web_assets/css/style.css
+++ b/public/web_assets/css/style.css
@@ -1,28 +1,32 @@
 html,
 body {
-
-   overflow-x: hidden !important;
+    overflow-x: hidden !important;
     margin: 0;
     padding: 0;
-
 }
-.table td, .table th {
-    padding: .75rem;
+
+.table td,
+.table th {
+    padding: 0.75rem;
     vertical-align: top;
     border-top: 1px solid #dee2e6;
     border: 0px;
 }
+
 .navbar-brand {
     margin-right: auto;
     margin-left: auto;
-  }
-  .navbar-dark .navbar-nav .nav-link {
-    color: rgba(255, 255, 255, .5);
+}
+
+.navbar-dark .navbar-nav .nav-link {
+    color: rgba(255, 255, 255, 0.5);
     font-family: revert;
 }
+
 li.nav-item.active.nav-font {
     font-size: 15px;
 }
+
 h2.crousel-heading {
     font-size: 58px;
     letter-spacing: 2px;
@@ -30,10 +34,12 @@ h2.crousel-heading {
     font-weight: normal;
     line-height: 60px;
 }
+
 p.crousel-para {
     font-size: 17px;
     font-family: emoji;
 }
+
 .carousel-caption {
     position: absolute;
     right: 0%;
@@ -46,23 +52,28 @@ p.crousel-para {
     text-align: left;
     margin-right: 308px;
 }
-.carousel-picture{
-    height:600px;
+
+.carousel-picture {
+    height: 600px;
 }
+
 .crousel-button {
     background: transparent;
     border: 3px double orange;
     padding: 10px;
 }
-.crousel-button:hover{
+
+.crousel-button:hover {
     background: transparent;
     color: #fff;
-    border: #C7803F;
+    border: #c7803f;
 }
+
 .nav-img {
     max-width: 80%;
     height: auto;
 }
+
 .card {
     position: relative;
     display: -ms-flexbox;
@@ -73,39 +84,46 @@ p.crousel-para {
     word-wrap: break-word;
     background-color: #fff;
     background-clip: border-box;
-    border: 0px solid rgba(0, 0, 0, .125);
-    border-radius: .25rem;
+    border: 0px solid rgba(0, 0, 0, 0.125);
+    border-radius: 0.25rem;
     top: -50px;
 }
-.menu{
-    margin-top:-100px;
-    font-family:emoji;
+
+.menu {
+    margin-top: -100px;
+    font-family: emoji;
 }
+
 p.card-text {
     text-align: center;
     font-size: 15px;
     font-weight: 600;
     font-family: emoji;
 }
-.card:hover{
-    color: #C7803F;
+
+.card:hover {
+    color: #c7803f;
 }
+
 h3.item-description {
     text-align: center;
-    font-size:30px;
+    font-size: 30px;
 }
+
 section.item-buy {
     margin-top: 75px;
 }
-.card-d{
+
+.card-d {
     text-align: center;
     margin-top: -39px;
 }
+
 p.card-date {
-    border-color: #C7803F;
+    border-color: #c7803f;
     border: 1px solid;
     position: relative;
-    background: #C7803F;
+    background: #c7803f;
     letter-spacing: 8px;
     color: white;
     font-family: emoji;
@@ -113,87 +131,102 @@ p.card-date {
     width: fit-content;
     margin-left: 65px;
 }
+
 h5.card-title-item-buy {
     font-family: emoji;
-
 }
+
 p.card-text-title {
     font-size: 14px;
     font-family: emoji;
 }
+
 .button-card-2 {
     background: transparent;
     color: #743e0c;
     border: 0px;
-    border-bottom: 1px solid #C7803F;
+    border-bottom: 1px solid #c7803f;
 }
-.button-card-2:hover{
-    background: #C7803F;
+
+.button-card-2:hover {
+    background: #c7803f;
 }
+
 .about-body {
     margin-top: 130px;
     text-align: center;
 }
+
 h5.abour-des {
     font-family: emoji;
     font-size: 22px;
 }
+
 p.about-text-title {
     font-size: 16px;
     font-family: emoji;
 }
+
 .about-btn {
     background: transparent;
     color: black;
     font-family: emoji;
     border: 4px double #291206;
 }
-.about-btn:hover{
+
+.about-btn:hover {
     background: transparent;
     color: black;
     border: #291206;
 }
+
 .col-sm-4.about-bg {
-    background: #FCFAF3;
+    background: #fcfaf3;
 }
+
 /* welcome */
 .welcome-section {
-  
     padding-top: 40px;
     padding-bottom: 40px;
     margin-top: 30px;
 }
+
 img.img-welcome {
     height: 270px;
 }
+
 .welcome-body {
     text-align: center;
     margin-top: 24px;
 }
+
 h5.welcome-des {
     font-family: emoji;
     font-weight: normal;
     color: #291206;
 }
+
 h4.welcome-descripation {
     font-family: math;
     font-weight: 600;
     color: #291206;
 }
+
 p.welcome-text-title {
     font-family: emoji;
     font-weight: normal;
 }
 
-.welcome-btn{
+.welcome-btn {
     background: transparent;
     color: black;
     font-family: emoji;
-    border: 4px double #291206; 
+    border: 4px double #291206;
     font-size: 13px;
+    margin-top: 25px;
 }
 
-.welcome-btn:hover{
+.welcome-btn:hover {
     background: transparent;
     color: black;
     border: #291206;
@@ -202,34 +235,39 @@ p.welcome-text-title {
 section.about-us {
     margin-top: 25px;
 }
+
 .col-sm-6.about-us-bg {
-    background: #FCFAF3;
+    background: #fcfaf3;
     margin-right: -15px;
 }
+
 h4.about-us-des {
     font-family: math;
     color: #291206;
 }
-h5.about-us-descripation{
+
+h5.about-us-descripation {
     font-family: math;
     color: #291206;
     font-weight: 600;
 }
+
 p.about-us-text-title {
     font-family: revert;
     font-weight: normal;
     font-style: normal;
 }
-  
+
 /* footer */
 section.footer-bg {
     background: #555555;
 }
+
 .form-control {
     display: block;
     width: 100%;
-    height: calc(1.5em + .75rem + 2px);
-    padding: .375rem .75rem;
+    height: calc(1.5em + 0.75rem + 2px);
+    padding: 0.375rem 0.75rem;
     font-size: 1rem;
     font-weight: 400;
     line-height: 1.5;
@@ -238,54 +276,63 @@ section.footer-bg {
     background-clip: padding-box;
     border: 0px solid #ced4da;
     border-radius: 0px;
-    transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out;
-    border-bottom:1px solid #cfcfcf;
+    transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+    border-bottom: 1px solid #cfcfcf;
 }
+
 .col-sm-6.foam-bg {
     background: white;
 }
+
 img.img-footer {
     height: 318px;
     width: 364px;
 }
 
-h3.foam-heading{
+h3.foam-heading {
     font-family: math;
     color: #291206;
     font-weight: 500;
     margin-top: 25px;
-    font-size:30px;
+    font-size: 30px;
 }
+
 ::placeholder {
     color: #291206;
     /*font-style: italic;*/
-  }
-  .footer-foam-btn {
+}
+
+.footer-foam-btn {
     background: transparent;
     border: 3px dashed;
-    border-color: #ED8D74;
+    border-color: #ed8d74;
     color: black;
     font-family: revert;
     border-radius: 26px;
 }
-.footer-foam-btn:hover{
+
+.footer-foam-btn:hover {
     background: transparent;
-    color:#291206;
+    color: #291206;
     border-color: #743e0c;
 }
+
 form.footer-foam {
     padding-left: 50px;
     padding-right: 60px;
     margin-top: 44px;
     padding-bottom: 27px;
 }
+
 .col-sm-6.map-colomn {
     margin-left: 15px;
-    background: #FCFAF3;
+    background: #fcfaf3;
 }
+
 .row.footer-top {
-    MARGIN-TOP: -140PX;
+    margin-top: -140px;
 }
+
 img.footer-logo {
     width: 200px;
     height: auto;
@@ -295,46 +342,46 @@ img.footer-logo {
 img.social-icon {
     padding: 10px;
 }
+
 p.footer-text {
     color: white;
 
     /* border-top: 1px solid; */
 }
+
 .col-sm-12.d-flex.justify-content-center.border-footer {
     border-top: 1px solid white;
     margin-top: 50px;
-    padding-top:15px;
+    padding-top: 15px;
 }
 
-
 #favicon:hover {
-  content: url('transparent_favicon.png');
+    content: url("transparent_favicon.png");
 }
 
 @media (min-width: 768px) {
     .navbar-nav {
-      margin-left: 75px;
-      margin-right: auto;
-      display: flex;
-      align-items: center;
+        margin-left: 75px;
+        margin-right: auto;
+        display: flex;
+        align-items: center;
     }
-  }
-  
+}
+
 @media (min-width: 587px) {
     .navbar-nav {
-      margin-left: 75px;
-      margin-right: auto;
-      display: flex;
-      align-items: center;
+        margin-left: 75px;
+        margin-right: auto;
+        display: flex;
+        align-items: center;
     }
-  }
+}
 
 /* home-page-css-end-here */
 
+/* Menu/css/starts/here */
 
-  /* Menu/css/starts/here */
-
-  h4.menu-description {
+h4.menu-description {
     text-align: center;
     color: rgb(255, 255, 255);
     font-family: auto;
@@ -347,22 +394,24 @@ p.footer-text {
     margin-bottom: -1px;
     background-color: transparent;
     border: 1px solid transparent;
-    border-top-left-radius: .25rem;
-    border-top-right-radius: .25rem;
+    border-top-left-radius: 0.25rem;
+    border-top-right-radius: 0.25rem;
     margin-left: 40px;
     color: #878787;
 }
 
-.nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active {
+.nav-tabs .nav-item.show .nav-link,
+.nav-tabs .nav-link.active {
     color: #c4640b;
     background-color: #fff;
     border-color: #dee2e6 #dee2e6 #fff;
 }
+
 section.tabs-section {
     margin-top: 25px;
 }
 
-h4.tabs-des{
+h4.tabs-des {
     text-align: center;
     color: #291206;
     font-family: auto;
@@ -374,9 +423,10 @@ h4.media-heading {
     font-size: 18px;
     font-family: normal;
 }
+
 p.media-about {
     text-transform: uppercase;
-    color: #C7803F;
+    color: #c7803f;
 }
 
 img.media-object.img-fluid {
@@ -387,8 +437,9 @@ img.media-object.img-fluid {
 .media-body-cart {
     margin-left: 15px;
 }
+
 .vertical {
-    border-left: 2px solid #C7803F;
+    border-left: 2px solid #c7803f;
     height: 90px;
     position: absolute;
     left: 50%;
@@ -414,9 +465,6 @@ a.btn.btn-primary.summary-btn.ty {
     margin-top: -180px;
 }
 
-
-
-
 h3.order-descripation {
     color: white;
     text-align: center;
@@ -425,32 +473,152 @@ h3.order-descripation {
     margin-top: -42px;
     font-family: cursive;
 }
-.invoice-title h2, .invoice-title h3 {
+
+.invoice-title h2,
+.invoice-title h3 {
     display: inline-block;
 }
 
-.table > tbody > tr > .no-line {
+.table>tbody>tr>.no-line {
     border-top: none;
 }
 
-.table > thead > tr > .no-line {
+.table>thead>tr>.no-line {
     border-bottom: none;
 }
 
-.table > tbody > tr > .thick-line {
+.table>tbody>tr>.thick-line {
     border-top: 2px solid;
 }
+
 tr.border-b {
     border-bottom: 1px solid black;
 }
+
 .table-background {
     background: white;
 }
 
-h3.order-bottom{
+h3.order-bottom {
     color: white;
     text-align: center;
     font-size: 21px;
     margin-top: 32px;
     font-family: cursive;
 }
+
+.input-group button {
+    border-radius: 50%;
+}
+
+.col.buttons {
+    border: 1px solid grey;
+    border-radius: 32px;
+}
+
+.input-group {
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+    flex-wrap: nowrap;
+    -ms-flex-align: stretch;
+    align-items: stretch;
+    width: 100%;
+}
+
+button.btn.btn-link.px-2 {
+    color: grey;
+    /* width: 22px; */
+}
+
+button.btn.btn-link.px-2:hover {
+    background: transparent;
+}
+
+.modal-body {
+    position: relative;
+    -ms-flex: 1 1 auto;
+    flex: 1 1 auto;
+    padding: 1rem;
+    background: #555555;
+}
+
+input#form1 {
+    text-align: center;
+}
+
+.border-left {
+    border-left: 2px solid #c7803f !important;
+}
+
+button#dropdownMenuButton {
+    width: 100%;
+}
+
+button#dropdownMenuButton {
+    width: 100%;
+    font-family: cursive;
+    font-size: 18px;
+    background: #c7803f;
+    border: 1px solid #c7803f;
+}
+
+.dropdown-toggle::after {
+    display: inline-block;
+    margin-left: 0.255em;
+    vertical-align: 0.255em;
+    content: "";
+    border-top: 0.3em solid;
+    border-right: 0.3em solid transparent;
+    border-bottom: 0;
+    border-left: 0.3em solid transparent;
+}
+
+/* Arrow position when dropdown is open */
+.dropdown-toggle[aria-expanded="true"]::after {
+    transform: translateY(-50%) rotate(180deg);
+    text-decoration-style: initial;
+    counter-reset: initial;
+}
+.dropdown-menu {
+    left: 50% !important;
+    top: 100% !important;
+    transform: translateX(-50%) !important;
+}
+input#start {
+
+    display: block;
+    width: 100%;
+    height: calc(1.5em + 0.75rem + 2px);
+    padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+
+    background-color: transparent;
+    background-clip: padding-box;
+    border: 0px solid #ced4da;
+    border-radius: 0px;
+    transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+    border-bottom: 1px solid #cfcfcf;
+}
+.form-control:focus {
+    color: #495057;
+    background-color: #fff;
+    border-color: #000000;
+    outline: 0;
+    box-shadow: 0 0 0 0.1rem rgba(26, 25, 25, 0.93);
+}
+
+p#test {
+    color: black;
+}
+.card:hover p#test{
+    color: #C7803F;
+    text-decoration: none;
+}
+.col-text-underline a{
+    text-decoration: none;
+}
+
+
