--- a/public/web_assets/css/style.css
+++ b/public/web_assets/css/style.css
@@ -715,3 +715,40 @@ select#order {
     width: 100px;
 
 }
+
+input#form1 {
+    text-align: center;
+    border: 0px;
+}
+
+input.qty-input {
+    border: 0px;
+    text-align: center;
+}
+
+.btn.focus,
+.btn:focus {
+    outline: 0;
+    box-shadow: unset !important;
+}
+
+/* RTL */
+.rtl {
+    text-align: right !important;
+}
+
+.about-btn-rtl {
+    float: right;
+}
+
+.foam-heading-rtl {
+    text-align: right !important;
+}
+
+.form-control-rtl {
+    text-align: end;
+}
+
+.footer-foam-btn-rtl {
+    float: right;
+}
